hphp/hack/test/typecheck/tconst/cannot_use_class_tparams.php.exp
ERROR: File "cannot_use_class_tparams.php", line 4, characters 30-30:
A type constant cannot use type parameters (NastCheck[3027])
  File "cannot_use_class_tparams.php", line 3, characters 9-9:
  `T` was declared as a type parameter here
