hphp/hack/test/typecheck/tconst/cannot_use_class_tparams.php
<?hh // strict

class A<T> {
  private type const Foo = Container<T>;
}
